Add Maven packaging and executing plugins